Xcode DEBUG/Build BorderWatch_2025-12-13T18-31-28.txt

Showing Recent Issues

Build target BorderWatch of project BorderWatch with configuration Debug

SwiftDriver BorderWatch normal arm64 com.apple.xcode.tools.swift.compiler (in target 'BorderWatch' from project 'BorderWatch')
    cd /Users/computer/Desktop/DEFCON_Run/BorderWatch
    builtin-SwiftDriver -- /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -module-name BorderWatch -Onone -enforce-exclusivity\=checked @/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/Objects-normal/arm64/BorderWatch.SwiftFileList -DDEBUG -default-isolation\=MainActor -enable-bare-slash-regex -enable-upcoming-feature DisableOutwardActorInference -enable-upcoming-feature InferSendableFromCaptures -enable-upcoming-feature GlobalActorIsolatedTypesUsability -enable-upcoming-feature MemberImportVisibility -enable-upcoming-feature InferIsolatedConformances -enable-upcoming-feature NonisolatedNonsendingByDefault -enable-experimental-feature DebugDescriptionMacro -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator26.2.sdk -target arm64-apple-ios26.1-simulator -g -module-cache-path /Users/computer/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -Xfrontend -serialize-debugging-options -profile-coverage-mapping -profile-generate -enable-testing -index-store-path /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Index.noindex/DataStore -Xcc -D_LIBCPP_HARDENING_MODE\=_LIBCPP_HARDENING_MODE_DEBUG -swift-version 5 -I /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Products/Debug-iphonesimulator -F /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Products/Debug-iphonesimulator -emit-localized-strings -emit-localized-strings-path /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/Objects-normal/arm64 -c -j14 -enable-batch-mode -incremental -Xcc -ivfsstatcache -Xcc /Users/computer/Library/Developer/Xcode/DerivedData/SDKStatCaches.noindex/iphonesimulator26.2-23C53-7d00a8b37fbd7999ea79df8ebc024bf0.sdkstatcache -output-file-map /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/Objects-normal/arm64/BorderWatch-OutputFileMap.json -use-frontend-parseable-output -save-temps -no-color-diagnostics -explicit-module-build -module-cache-path /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/SwiftExplicitPrecompiledModules -clang-scanner-module-cache-path /Users/computer/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -sdk-module-cache-path /Users/computer/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -serialize-diagnostics -emit-dependencies -emit-module -emit-module-path /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/Objects-normal/arm64/BorderWatch.swiftmodule -validate-clang-modules-once -clang-build-session-file /Users/computer/Library/Developer/Xcode/DerivedData/ModuleCache.noindex/Session.modulevalidation -Xcc -I/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/swift-overrides.hmap -emit-const-values -Xfrontend -const-gather-protocols-file -Xfrontend /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/Objects-normal/arm64/BorderWatch_const_extract_protocols.json -Xcc -iquote -Xcc /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/BorderWatch-generated-files.hmap -Xcc -I/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/BorderWatch-own-target-headers.hmap -Xcc -I/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/BorderWatch-all-target-headers.hmap -Xcc -iquote -Xcc /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/BorderWatch-project-headers.hmap -Xcc -I/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Products/Debug-iphonesimulator/include -Xcc -I/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/DerivedSources-normal/arm64 -Xcc -I/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/DerivedSources/arm64 -Xcc -I/Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/DerivedSources -Xcc -DDEBUG\=1 -emit-objc-header -emit-objc-header-path /Users/computer/Library/Developer/Xcode/DerivedData/BorderWatch-hijgwackwzymsgajbsoearhdgqkf/Build/Intermediates.noindex/BorderWatch.build/Debug-iphonesimulator/BorderWatch.build/Objects-normal/arm64/BorderWatch-Swift.h -working-directory /Users/computer/Desktop/DEFCON_Run/BorderWatch -experimental-emit-module-separately -disable-cmo

/Users/computer/Desktop/DEFCON_Run/BorderWatch/BorderWatch/ConflictMonitorView.swift:326:11: error: Single-quoted string literal found, use '"'
EOFcat << 'EOF' > BorderWatch/BorderWatch/ConflictMonitorView.swift
          ^~~~~
          "EOF" (in target 'BorderWatch' from project 'BorderWatch')
/Users/computer/Desktop/DEFCON_Run/BorderWatch/BorderWatch/ConflictMonitorView.swift:326:1: error: Expressions are not allowed at the top level
EOFcat << 'EOF' > BorderWatch/BorderWatch/ConflictMonitorView.swift
^ (in target 'BorderWatch' from project 'BorderWatch')

/Users/computer/Desktop/DEFCON_Run/BorderWatch/BorderWatch/ConflictMonitorView.swift:326:11: Single-quoted string literal found, use '"'
EOFcat << 'EOF' > BorderWatch/BorderWatch/ConflictMonitorView.swift
          ^~~~~
          "EOF"

/Users/computer/Desktop/DEFCON_Run/BorderWatch/BorderWatch/ConflictMonitorView.swift:326:1: Expressions are not allowed at the top level
EOFcat << 'EOF' > BorderWatch/BorderWatch/ConflictMonitorView.swift
^



Build failed    12/13/25, 6:31 PM    1.3 seconds
